# regulatory-and-licensing-system

./: .gitignore  README.md  SCOPE.md  USE_CASES.md  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 626e79a17e2f_add_users_applications_submissions_.py
backend/src/app/: config.py  main.py  models.py
backend/src/app/auth/: dependencies.py  router.py  schemas.py
backend/src/app/routers/: applications.py  documents.py
backend/src/app/services/: ai_stub.py  notifications.py  status_machine.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_database.py  test_documents.py  test_notifications.py  test_status_machine.py
docs/superpowers/plans/: 2026-04-26-infra.md  2026-04-27-uc1-operator-submission.md  2026-04-28-application-detail-redesign.md  2026-04-28-ui-shell-patch.md  2026-04-29-uc2-officer-review.md
docs/superpowers/specs/: 2026-04-26-task-breakdown-design.md  2026-04-27-uc1-operator-submission-design.md  2026-04-28-application-detail-redesign.md  2026-04-28-uc2-officer-review-design.md  2026-04-28-ui-shell-patch-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  routes.tsx
frontend/src/components/: ApplicationSections.test.tsx  ApplicationSections.tsx  DocumentUploader.tsx  FeedbackPanel.test.tsx  FeedbackPanel.tsx  FeedbackSummary.tsx  OfficerLayout.test.tsx  OfficerLayout.tsx  (+5 more)
(+17 files in other folders)
